[project]
name = "langgraph-helper"
version = "0.1.0"
description = "Agent that helps developers work with LangGraph and LangChain documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
]
